<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TableRow
        android:id="@+id/tableRowHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back" />

        <ImageButton
            android:id="@+id/helpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/help" />

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/home" />

    </TableRow>
    
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/tableRow1"
        android:layout_below="@+id/tableRowHome"
        android:layout_centerHorizontal="true" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/homeAdminButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/admin" />

            <Button
                android:id="@+id/homeAnalysisButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/analysis" />

            <Button
                android:id="@+id/homeMyAccountButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/myaccount" />
        </LinearLayout>
    </FrameLayout>
</RelativeLayout>