<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:gravity="center">

    <ImageButton
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/save" />

    <TableRow
        android:id="@+id/tableRowEditEmp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back" />

        <ImageButton
            android:id="@+id/helpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/help" />

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/home" />

    </TableRow>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/tableRow4"
        android:layout_below="@+id/tableRowEditEmp"
        android:layout_centerHorizontal="true" >
	    
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="vertical" >
	
				<TableRow
				    android:id="@+id/tableRow1"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content" >
	
				    <TextView
				        android:id="@+id/textView3"
				        android:layout_width="190dp"
				        android:layout_height="wrap_content"
				        android:layout_gravity="center"
				        android:text="@string/employeename"
				        android:textAppearance="?android:attr/textAppearanceLarge" />
	
				    <EditText
				        android:id="@+id/idText"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:textAppearance="?android:attr/textAppearanceLarge"  >
				        <requestFocus />
				    </EditText>
				</TableRow>
	
			    <TableRow
			        android:id="@+id/tableRow2"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content" >
				        <TextView
			            android:id="@+id/addEmpSubj"
			            android:layout_width="190dp"
			            android:layout_height="wrap_content"
			            android:text="@string/subjectarea"
			            android:textAppearance="?android:attr/textAppearanceLarge" />
	
			        <Spinner
			            android:id="@+id/subjectSpinner"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content" />
	
			    </TableRow>
	
			    <TableRow
			        android:id="@+id/tableRow3"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content">
				        <TextView
			            android:id="@+id/addEmpSkillGroup"
			            android:layout_width="190dp"
			            android:layout_height="wrap_content"
			            android:text="@string/skillsgroup"
			            android:textAppearance="?android:attr/textAppearanceLarge" />
	
			        <Spinner
			            android:id="@+id/skillGroupSpinner"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content" />
	
			    </TableRow>
	
		    <ScrollView
		        android:id="@+id/scrollView1"
		        android:layout_width="match_parent"
		        android:layout_height="0dip"
		        android:layout_weight="1" >
	
		        <LinearLayout
		            android:id="@+id/linearLayout1"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent"
		            android:orientation="vertical" >
	
       	            <TextView
		                android:id="@+id/addEmpSkills"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:paddingBottom="10dp"
		                android:paddingTop="10dp"
		                android:text="@string/skills"
		                android:textAppearance="?android:attr/textAppearanceLarge" />
	
		            <TableLayout
		                android:id="@+id/checkboxSpace"
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content" >
		            </TableLayout>
		        </LinearLayout>
		    </ScrollView>
	     </LinearLayout>
	</FrameLayout>
</RelativeLayout>